# Email-AI

./: .gitignore  email_cleaning.py  mbox_to_csv.py  pyproject.toml
