[tool.poetry]
name = "email-ai"
version = "0.1.0"
description = ""
authors = ["Sarthak Kapila <sarthakkapila27x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mailbox = "^0.4"
transformers = "^4.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
